--- a/jam/CongkakManual/Template Manual.html
+++ b/jam/CongkakManual/Template Manual.html
@@ -28,7 +28,7 @@
                 <h3>Appendix C</h3>
                 <ul>
                     <li>Each player controls the seven holes on the side of the board. Your holes are the holes on the board that are closer to you.</li>
-					<li>The big holes on the board are the stores. Your store is the big hole on the top left, while the other hole is your opponent's store.</li>
+					<li>The big holes on the board are the stores. Your store is the big hole on the bottom right, while the other hole is your opponent's store.</li>
 					<li>Both players begin simultaneously by selecting a hole to scoop up all the seeds in one of the seven holes on their sides.</li>
 					<li>Each drops a seed into the next hole and continues clockwise depositing one seed into every hole thereafter. A player drops a seed into his store each time he passes it but does not deposit any into his opponent’s store.</li>
                     <li>How the game continues, depends on where the last seed of each scoop is deposited.
