Apologies for being dumb ._.
Can't get my job done right
I did get some of the things right tho

--- a/jam/CongkakManual/Template Manual.html
+++ b/jam/CongkakManual/Template Manual.html
@@ -17,7 +17,7 @@
                 <span class="page-header-section-title">Congkak</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/Module Name.svg" class="diagram">
+                <img src="img/Component/Congkak.svg" class="diagram">
                 <h2>On the Subject of Congkak</h2>
                 <p class="flavour-text">Saya bertarung kamu tidak tahu apa maksud ayat ini disebabkan bahasanya bukan bahasa Inggeris.</p>
 
